Fixed the issues 1. The table edit icon was not displayed. 2. The table’s border color and fill color couldn’t be applied. 3. The right side of the vignette could not be grabbed for resizing due to the edit icon. 4. Left/right options are visible in the table fill-color menu which should only appear in the table border color menu (color-picker).

--- a/src/styles/czi-table-cell-menu.css
+++ b/src/styles/czi-table-cell-menu.css
@@ -3,7 +3,7 @@
   box-shadow: 0 0 0 0.3px rgb(0 0 0 / 35%);
   height: 24px;
   width: 24px;
-  margin: 5px 5px 0 0;
+  margin: 5px 5px 0 -35px;
   padding: 0 3px;
   text-align: center;
   pointer-events: auto;
